--- a/add_task.html
+++ b/add_task.html
@@ -81,10 +81,10 @@
       <section class="section-one">
         <form>
           <label for="title-input">Title</label>
-          <input class="all-input" id="title-input" type="text" name="title" required />
+          <input class="all-input" id="title-input" type="text" name="title" placeholder="Enter a title" required />
 
           <label for="description-input" >Description</label>
-          <textarea id="description-input" name="description" required></textarea>
+          <textarea id="description-input" name="description" placeholder="Enter a description" required></textarea>
 
           <label for="Category">Category</label>
           <div onclick="selectTaskCategory()" id="select-one" class="select-one">
@@ -173,7 +173,7 @@
         <form>
           <label for="date-input">Due Date</label>
           <div class="date-input-container">
-            <input class="all-input" type="date" placeholder="dd/mm/yyyy" />
+            <input class="all-input dateInput" type="date" placeholder="dd/mm/yyyy" />
           </div>
 
           
