--- a/board.html
+++ b/board.html
@@ -123,26 +123,7 @@
         <div class="empty-card">No tasks to do</div>
         <div class="list" id="todo-card" ondrop="moveTo('todo'); removeHighlight('todo-card')"
           ondragleave="removeHighlight('todo-card')" ondragover="allowDrop(event); highlight('todo-card')">
-          <!-- <div class="task-card card-with-PBar"> -->
-          <!-- <div class="task-category orange">Design</div>
-                    <div class="task-title">Website redesign</div>
-                    <div class="task-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A obcaecati quisquam iusto necessitatibus? 
-                        Necessitatibus.</div>
-                    <div class="task-progress">
-                        <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar bg-info" ></div>
-                        </div>
-                        <div class="progress-steps">0/2 Done</div>
-                    </div>
-                    <div class="task-assignedTo">
-                        <div class="task-icons">
-                            <span class="orange">SM</span>
-                            <span class="purple">MN</span>
-                            <span class="green">EF</span>
-                        </div>
-                        <img src="./asssets/img/toDo icon.svg" alt="">
-                    </div> -->
-          <!-- </div> -->
+        
         </div>
 
 
@@ -165,22 +146,17 @@
             <div class="task-category pink"></div>
             <div class="task-title"></div>
             <div class="task-description">
-
             </div>
-
             <div class="task-assignedTo">
               <div class="task-icons">
                 <span class="orange"></span>
                 <span class="purple"></span>
                 <span class="dark-blue"></span>
               </div>
-
               <img src="./asssets/img/inProgress-icon.svg" alt="" />
             </div>
           </div>
         </div>
-
-
       </div>
       <!----------- Awaiting Feedback Section ---------------->
 
@@ -191,27 +167,21 @@
             <img id="add-card" src="./asssets/img/add-card.svg" alt="" />
           </div>
         </div>
-        <div id="empty-card-feedback" class="empty-card">No tasks</div>
+        <div id="empty-card-feedback" class="empty-card">No tasks awaiting feedback</div>
         <div class="list" id="Feedback-card" ondrop="moveTo('feedback'); removeHighlight('Feedback-card')"
           ondragleave="removeHighlight('Feedback-card')" ondragover="allowDrop(event); highlight('Feedback-card')">
           <div class="task-card">
             <div class="task-category light-green"></div>
             <div class="task-title"></div>
             <div class="task-description">
-
             </div>
-
             <div class="task-assignedTo">
               <div class="task-icons">
-
               </div>
-
               <img src="./asssets/img/Feedback-icon.svg" alt="" />
             </div>
           </div>
         </div>
-
-
       </div>
       <!----------- Done Section ---------------->
 
@@ -229,9 +199,7 @@
             <div class="task-category blue"></div>
             <div class="task-title"></div>
             <div class="task-description">
-
             </div>
-
             <div class="task-progress">
               <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0"
                 aria-valuemax="100">
@@ -239,18 +207,13 @@
               </div>
               <div class="progress-steps"></div>
             </div>
-
             <div class="task-assignedTo">
               <div class="task-icons">
-
               </div>
-
               <img src="./asssets/img/toDo-icon.svg" alt="" />
             </div>
           </div>
         </div>
-
-
       </div>
     </div>
   </div>
