Edit task nearly fixed

--- a/add_task.html
+++ b/add_task.html
@@ -91,7 +91,7 @@
           <div onclick="selectTaskCategory()" id="select-one" class="select-one">
             <div class="select-one-div">
               <span>Select task category</span>
-              <img src="" alt="">
+              <div class="circle"></div>
             </div>
             <img src="./asssets/img/open.svg" alt="" />
           </div>
