--- a/board.html
+++ b/board.html
@@ -233,7 +233,7 @@
               <div onclick="selectTaskCategory()" id="select-one" class="select-one">
                 <div class="select-one-div">
                   <span>Select task category</span>
-                  <img src="" alt="">
+                  <div class="circle "></div>
                 </div>
                 <img src="./asssets/img/open.svg" alt="" />
               </div>
@@ -378,7 +378,7 @@
     <div class="task-content-popup" id="taskContent">
       <!-- Inhalt deines Popups -->
 
-      <div class="popUp-head-task">
+      <!-- <div class="popUp-head-task">
         <div class="task-category-one pink">Sales</div>
         <img id="close-popUp-one" class="close-popUp-arrows" src="./asssets/img/popUp-arrow.svg" alt="" />
         <img class="close-popUp-xx display-none" src="./asssets/img/popUp-close.svg" alt="" />
@@ -401,11 +401,11 @@
           <span>Urgent</span>
           <img src="./asssets/img/Prio-icon-arrow.svg" alt="" />
         </div>
-      </div>
+      </div> -->
 
       <!------------- Assigned to Section ------------>
 
-      <span class="assignedTo-titlE">Assigned To:</span>
+      <!-- <span class="assignedTo-titlE">Assigned To:</span>
 
       <div class="assignedTo-listE">
         <div class="assignedTo-divE">
@@ -424,19 +424,19 @@
           <div class="assignedTo-iconE pink">SF</div>
           <div class="assignedTo-name">Stefanie Farber</div>
         </div>
-      </div>
+      </div> -->
 
       <!------------- delete and edit btns Section (mobile) ------------>
-      <div class="btns-responsive firstTypebtns">
+      <!-- <div class="btns-responsive firstTypebtns">
         <div></div>
         <div class="popUp-btns">
           <img class="popUp-delete" src="./asssets/img/popUp-deleteBTN.svg" alt="" />
-          <img class="popUp-edit" src="./asssets/img/popUp-editBTN.svg" alt="" />
+          <img onclick="openEditPopup()" class="popUp-edit" src="./asssets/img/popUp-editBTN.svg" alt="" />
         </div>
       </div>
 
       <!------------- delete and edit btns Section (Desktop) ------------>
-      <div class="btns-responsive">
+      <!-- <div class="btns-responsive">
         <div></div>
         <div class="popUp-btns secondTypebtns">
           <div id="popUpDelete" class="popUp-delete-responsive">
@@ -447,11 +447,11 @@
           </div>
         </div>
       </div>
-      <button onclick="closeEditPopup()">Schließen</button>
+      <button onclick="closeEditPopup()">Schließen</button> -->
     </div>
-  </div>
+  </div> 
 
-  <div id="task-overlay-popup" class="task-overlay-popup">
+  <!-- <div id="task-overlay-popup" class="task-overlay-popup">
     <div id="task-content-popup" class="task-content-popup">
       <h2>Edit Task</h2>
       <form>
@@ -459,12 +459,12 @@
         <input type="text" id="popup-title" name="popup-title"><br>
         <label for="popup-description">Description:</label><br>
         <input type="text" id="popup-description" name="popup-description"><br>
-        <!-- und so weiter für alle Felder, die du bearbeiten möchtest -->
-        <input type="submit" value="Submit">
+        und so weiter für alle Felder, die du bearbeiten möchtest -->
+        <!-- <input type="submit" value="Submit">
       </form>
       <button onclick="closePopup()">Schließen</button>
     </div>
-  </div>
+  </div> --> 
 
 
 
