--- a/add_task.html
+++ b/add_task.html
@@ -203,15 +203,12 @@
           </div>
 
           <div id="subtasks"> <!-- Dieses Element wird als Container für die neuen Subtasks verwendet -->
-            <!-- <div class="subtask">
-              <input type="checkbox" id="subtask1" name="subtask1" class="checkbox-subtask" />
-              <label class="subtask-name" for="subtask1">Subtask 1</label><img id="delete-subtask" src="./asssets/img/cancel-svg.svg" alt="">
-            </div> -->
+            
           </div>
 
 
 
-          <div class="cancel-btn-desktop">
+          <div onclick="resetInputFields()" class="cancel-btn-desktop">
             <span>Cancel</span>
             <img class="cancel-img" src="./asssets/img/cancel-svg.svg" alt="">
           </div>
