--- a/summary.html
+++ b/summary.html
@@ -107,7 +107,7 @@
                     <div class="task-status-description">
                         <img class="positionNone" src="./asssets/img/urgent-icon.svg" alt="">
                         <div class="summary-counter">
-                            <div class="s-number" id="countPrio">1</div>
+                            <div class="s-number" id="countPrio"></div>
                             <div>Urgent</div>
                         </div>
                     </div>
