ContactAddTask fixed, jsDoc, css

--- a/add_task.html
+++ b/add_task.html
@@ -78,6 +78,13 @@
     <p>Kanban Project Management Tool</p>
     <h1>Add Task</h1>
     <div class="inner-wrap">
+
+      <div id="myCustomPopup" class="popupContainer">
+        <div class="popupBody">
+          <span id="popupDismiss">&times;</span>
+          <p id="popupNote"></p>
+        </div>
+      </div>
      
       <section class="section-one">
         
