--- a/task_edit.html
+++ b/task_edit.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./asssets/css/task_edit.css">
-    <link rel="stylesheet" href="/asssets/css/header.css">
-    <link rel="stylesheet" href="/asssets/css/footer.css">
+    <link rel="stylesheet" href="./asssets/css/header.css">
+    <link rel="stylesheet" href="./asssets/css/footer.css">
     <script src="./js/add_task.js"></script>
     <script src="./js/task_edit.js"></script>
-    <script src="header_include.js"></script>
+    <script src="./header_include.js"></script>
     
     <title>Task edit</title>
 </head>
 <body onload="init()">
-  <div w3-header-include-html="/asssets/templates/header.html"></div>
+  <div w3-header-include-html="./asssets/templates/header.html"></div>
     <div class="main-content"> 
 
           <!-- Input Section -->
@@ -79,6 +79,6 @@
                   
     </div>
    
-<footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
+<footer w3-footer-include-html="./asssets/templates/footer.html"></footer>
 </body>
 </html>
