--- a/board.html
+++ b/board.html
@@ -13,11 +13,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
-  <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
-  <link rel="stylesheet" href="/asssets/css/header.css">
-  <link rel="stylesheet" href="/asssets/css/footer.css">
-  <link rel="stylesheet" href="asssets/css/add_task_popUp.css">
-  <link rel="stylesheet" href="task-popUp.css">
+  <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+  <link rel="stylesheet" href="./asssets/css/header.css">
+  <link rel="stylesheet" href="./asssets/css/footer.css">
+  <link rel="stylesheet" href="./asssets/css/add_task_popUp.css">
+  <link rel="stylesheet" href="./task-popUp.css">
   <link rel="stylesheet" href="./asssets/css/web_header.css">
   <script src="./js/board.js"></script>
   <script src="./js/add_task_popup.js"></script>
