--- a/guest_hello.html
+++ b/guest_hello.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="./asssets/css/footer.css">
     <link rel="stylesheet" href="./asssets/css/guest_hello.css">
     <script src="./js/header_include.js"></script>
-    <script src="/js/register.js"></script>
-    <script src="/js/storage.js"></script>
-    <script src="/js/login.js"></script>
+    <script src="./js/register.js"></script>
+    <script src="./js/storage.js"></script>
+    <script src="./js/login.js"></script>
 </head>
 <body onload="loadSummary()">
     <div w3-header-include-html="./asssets/templates/header.html"></div>
