--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/asssets/css/web_header.css">
-    <link rel="icon" type="image/x-icon" href="/asssets/img/mobile-login-logo-dark.svg">
-    <link rel="stylesheet" href="/asssets/css/mobile-login.css">
-    <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
-    <link rel="stylesheet" href="/asssets/css/footer.css">
-    <link rel="stylesheet" href="/asssets/css/guest_hello.css">
-    <script src="/js/header_include.js"></script>
-    <script src="/js/generatHTML.js"></script>
-    <script src="/js/header_include.js"></script>
-    <script src="/js/summary.js"></script>
+    <link rel="stylesheet" href="./asssets/css/web_header.css">
+    <link rel="icon" type="image/x-icon" href="./asssets/img/mobile-login-logo-dark.svg">
+    <link rel="stylesheet" href="./asssets/css/mobile-login.css">
+    <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./asssets/css/footer.css">
+    <link rel="stylesheet" href="./asssets/css/guest_hello.css">
+    <script src="./js/header_include.js"></script>
+    <script src="./js/generatHTML.js"></script>
+    <script src="./js/header_include.js"></script>
+    <script src="./js/summary.js"></script>
 </head>
 
 
@@ -24,17 +24,17 @@
 
         <div class="logo-container">
             <img class="white-logo" src="./asssets/img/Join_logo_white.svg" alt="" style="padding-top:37px">
-            <img class="dark-logo" src="/asssets/img/mobile-login-logo-dark.svg" alt="" style="padding-top:37px">
+            <img class="dark-logo" src="./asssets/img/mobile-login-logo-dark.svg" alt="" style="padding-top:37px">
         </div>
     <div class="main-content">
         <div id="inside-window" class="inside-window">
             <h1>Log in</h1>
-            <img class="login-line" src="/asssets/img/line.svg" alt="Trennlinie">
+            <img class="login-line" src="./asssets/img/line.svg" alt="Trennlinie">
             <form onsubmit="logIn(); return false">
                 <div class="input-field-outter-container">
                     <div class="input-field">
                         <input id="email" class="e-mail" type="email" name="" required placeholder="Email">
-                        <img src="/asssets/img/email-icon.svg" alt="e-mail icon">
+                        <img src="./asssets/img/email-icon.svg" alt="e-mail icon">
                     </div>
                     <div class="input-field">
                         <input onkeyup="togglePasswordVisibility()" id="input" class="password" type="password" required placeholder="Password">
@@ -76,11 +76,11 @@
             </div>
         </div>
     </div>
-    <script src="/js/script.js"></script>
-    <script src="/js/script.js"></script>
-    <script src="/js/storage.js"></script>
-    <script src="/js/register.js"></script>
-    <script src="/js/login.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/storage.js"></script>
+    <script src="./js/register.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
