--- a/task-popUp.html
+++ b/task-popUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="task-popUp.css">
+    <link rel="stylesheet" href="./task-popUp.css">
     <script src="./js/task-popUp.js"></script>
     <title>Task</title>
 </head>
@@ -13,7 +13,6 @@
 
     <div class="task-overlay">
         <div class="task-content" id="taskContent">
-          <!-- Inhalt deines Popups -->
           
         <div class="popUp-head-task">
             <div class="task-category-one pink">Sales</div>
