--- a/contacts.html
+++ b/contacts.html
@@ -78,8 +78,8 @@
     <div class="desktop-page">
         <div class="new-contact-frame">
             <div class="new-contact-container-frame">
-                <div onclick="openAddContactsOverlay()" class="new-contact-container">
-                    <span>New Contact</span>
+                <div onclick="openAddContactsOverlay()" class="new-contact-mobile-container">
+                    <!-- <span>New Contact</span> -->
                     <img src="./asssets/img/new-contact.svg" alt="New Contact">
                 </div>
             </div>
