--- a/help.html
+++ b/help.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./asssets/css/help.css">
-    <link rel="stylesheet" href="font.css" />
-    <link rel="stylesheet" href="/asssets/css/header.css">
-    <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
-    <link rel="stylesheet" href="/asssets/css/footer.css">
+    <link rel="stylesheet" href="./font.css" />
+    <link rel="stylesheet" href="./asssets/css/header.css">
+    <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./asssets/css/footer.css">
   </head>
 
   <body onload="init()">
-    <div w3-header-include-html="/asssets/templates/header.html"></div>
+    <div w3-header-include-html="./asssets/templates/header.html"></div>
     <div class="width" w3-header-include-html="/asssets/templates/web_header.html"></div>
 
       <button id="create-button">Create &#10003;</button>
@@ -83,8 +83,8 @@
       </div>
     </div>
 
-    <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
+    <footer w3-footer-include-html="./asssets/templates/footer.html"></footer>
     <script src="./js/header_include.js"></script>
-    <script src="add_task.js"></script>
+    <script src="./add_task.js"></script>
   </body>
 </html>
