--- a/board.html
+++ b/board.html
@@ -334,7 +334,8 @@
 
               <div id="subtasks"> <!-- Dieses Element wird als Container für die neuen Subtasks verwendet -->
                 <div class="subtask">
-  
+                  <!-- <input type="checkbox" id="subtask1" name="subtask1" class="checkbox-subtask" />
+                  <label class="subtask-name" for="subtask1"></label> -->
                 </div>
               </div>
 
