--- a/contacts.html
+++ b/contacts.html
@@ -186,7 +186,7 @@
                     <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
                 </div>
                 <img class="join-logo-white d-none" src="./asssets/img/join-logo-white.svg" alt="Join logo">
-                <h1 class="white">Add Contact</h1>
+                <h1 class="white add-contact-h1">Add Contact</h1>
                 <span class="tasks-are-better white">Tasks are better with a team</span>
                 <hr id="hr-blue-small-left" class="hr-blue-small-left">
             </div>
