--- a/contacts.html
+++ b/contacts.html
@@ -376,7 +376,7 @@
                       </div>
             
             
-                      <div class="btn-div">
+                      <div class="btn-div" onclick="closePopup()">
                         <div class="cancel-btn-desktop">
                           <span>Cancel</span>
                           <img class="cancel-img" src="./asssets/img/cancel-svg.svg" alt="">
