--- a/add_task.html
+++ b/add_task.html
@@ -86,7 +86,7 @@
         <textarea id="description-input" name="description" placeholder="Enter a description" required></textarea>
         <label for="Category">Category</label>
         <div onclick="selectTaskCategory()" id="select-one" class="select-one">
-          <div class="select-one-div">
+          <div id="select-one-div" class="select-one-div ">
             <span>Select task category</span>
             <div class="circle"></div>
           </div>
